<resources>
    <string name="app_name">StudentPortal</string>
    <string name="action_settings">Settings</string>
    <string name="url_description">The URL of the portal:</string>
    <string name="url_placeholder">https://</string>
    <string name="name_description">The title of the portal:</string>
    <string name="name_placeholder">Portal</string>
    <string name="add_portal_button">Add portal</string>
    <string name="empty_field_error">One or more fields are empty. Please fill all fields.</string>
</resources>
